[project]
name = "diffbot-memory"
version = "0.1.0"
description = "Graphiti temporal-memory MCP service for DiffBot (local Ollama + FalkorDB)"
requires-python = ">=3.11"

dependencies = [
    "graphiti-core==0.28.2",
    "falkordb==1.6.0",
    "mcp==1.26.0",
    "pydantic>=2",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:ament_copyright -p no:ament_flake8 -p no:ament_lint -p no:ament_pep257 -p no:ament_xmllint -p no:launch_ros -p no:launch_testing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diffbot_memory"]
